# cc-boiler-python-public

./: .coderabbit.yaml  .env.example  .gitignore  .mcp-example.json  .npmrc  .task-ledger.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  INITIAL.md  LICENSE  Makefile  PYTHON_DEVELOPMENT_PLAN.md  README-PUBLIC.md  README.md  SECURITY.md  SECURITY_SWEEP_RESULTS.md  UPDATE_SUMMARY.md  biome.json  bunfig.toml  components.json  pyproject.toml  requirements.txt
.claude/: AGENT_OS_INTEGRATION.md  FIX_SUMMARY.md  NEW_CHAT_CONTEXT.md  PYTHON_QUICK_REFERENCE.md  PYTHON_WORKFLOWS.md  QUICK_REFERENCE.md  README.md  aliases.json  branch-registry.json  chains.json  config.example.json  config.json  feature-state.json  permission-profiles.json  project-config.json  settings-default.json  settings-minimal.json  settings.example.json  settings.json  suggestions-config.json  tcpa.config.json  verification-manifest.json
.claude/branch-management/: COMPLETE_SUGGESTIONS_IMPLEMENTATION.md  NEXT_SUGGESTIONS_IMPLEMENTATION.md  VERIFICATION.md
.claude/commands/: CONTEXT_STRUCTURE.md  analytics.md  analyze-existing.md  analyze-project.md  assign-tasks.md  audit-form-security.md  auto-update-context.md  branch-status.md  branch-switch.md  browser-test-flow.md  bug-track.md  capture-to-issue.md  change-log.md  check-deps.md  check-logs.md  check-work.md  checkpoint.md  cloud-deploy.md  commit-review.md  compact-prepare.md  compress-context.md  context-analysis.md  context-grab.md  context-profile.md  context-refresh.md  create-component.md  create-event-handler.md  create-prd.md  create-tracked-form.md  design-mode.md  doc-cache.md  error-recovery.md  exists.md  extract-style.md  facts.md  feature-status.md  feature-workflow.md  field-generate.md  generate-docs.md  generate-field-types.md  (+71 more)
.claude/context/: state.json  workflow_state.json
.claude/doc-cache/: index.json  metadata.json
.claude/docs/: BRANCH_MANAGEMENT_GUIDE.md  COMMAND_REFERENCE_CARD.md  COMMIT_MESSAGE_WORKTREE.md  DAILY_WORKFLOW_GUIDE.md  DAY_1_QUICK_START.md  GETTING_STARTED.md  NEXT_COMMAND_SUGGESTIONS.md  OLD_PUSH_SUMMARY.md  PUSH_SUMMARY_WORKTREE.md  SYSTEM_OVERVIEW.md  TDD_AUTOMATION_SUMMARY.md  UPDATED_SYSTEM_PROMPT.md  VERIFICATION_MIGRATION_PLAN.md  WORKTREE_AND_REVIEW_GUIDE.md
.claude/hooks/: 00-auto-approve-safe-ops.py  01-action-logger.py  01-dangerous-commands.py  01-precompact-handler.py  01-save-transcript.py  01-track-completion.py  02-collab-sync.py  03-knowledge-share.py  03-smart-suggest.py  04-team-aware.py  05-standards-reference.py  06-code-quality.py  07-pii-protection.py  08-async-patterns.py  09-evidence-language.py  09-python-import-updater.py  12-code-test-validator.py  14-prd-clarity.py  15-branch-activity-tracker.py  16-next-command-suggester.py  17-task-ledger-updater.py  18-cloud-config-validator.py  19-test-generation-enforcer.py  21-branch-controller.py  22-thinking-level-integration.py  23-existing-project-analyzer.py  24-worktree-integration.py  ACTIVE_HOOKS.md  ENHANCEMENTS.md  IMPLEMENTATION-SUMMARY.md  PYTHON_HOOKS_GUIDE.md  README.md  TDD_INTEGRATION_GUIDE.md  config.json  debug-helper.py
.claude/personas/: agent-personas.json  personas.json
.claude/profiles/: profiles.json
.claude/python-deps/: import_graph.json
.claude/scripts/: activate-remaining-hooks.py  add-missing-hooks.py  analyze-hook-status.py  comprehensive-hook-fix.py  demo-v240-workflow.py  demo_worktree.py  final-cleanup.py  final-python-optimization.py  fix-hook-event-names.py  fix-hooks-to-official-format.py  fix-remaining-hooks.py  fix-system-sync.py  generate-docs.py  health-check.py  install-hooks.sh  make-executable.sh  make-hooks-executable.sh  make-new-hooks-executable.sh  nightly-update.py  optimize-for-python.py  system-audit.py  test-hooks-advanced.py  test-v240-hooks.py  test_integration_complete.py  test_workflow_simulation.py  test_worktree_integration.py  validate-hooks.py  worktree_applescript.py  worktree_manager.py
.claude/specs/: index.json
.claude/standards/: python-patterns.md
.claude/team/: config.json  knowledge-base.json  registry.json
.claude/templates/: marketing-site.json  saas-dashboard.json
.claude/utils/: __init__.py  sequence_learner.py  suggestion_engine.py
.github/ISSUE_TEMPLATE/: python_bug.md  python_feature.md
.github/workflows/: cleanup.yml
PRPs/: README.md
PRPs/templates/: prp_agent.md  prp_api.md  prp_base_python.md  prp_cloud_service.md  prp_pipeline.md
docs/: FEATURE_MATRIX.md  README.md  RELEASES.md  SECURITY_GUIDE.md  SYSTEM_OVERVIEW.md
docs/architecture/: event-analytics-alignment.md
docs/archive/: COMMIT_MESSAGE.txt  GIT_COMMIT_PLAN.md
docs/claude/: AI_AGENT_DOCUMENTATION.md  CLAUDE_CODE_GUIDE.md  NEW_CHAT_CONTEXT.md  PROJECT_CONTEXT.md  WHATS_NEW.md  (+2 more)
prisma/: schema.prisma
scripts/: README.md  add-to-existing-v2.3.5.sh  add-to-existing.sh  check-dependencies.ts  clean-before-public.sh  clean-git-history.sh  cleanup-public-repo.sh  quick-check.js  quick-setup.sh  rewrite-docs-python.py  setup-helper.js  setup-hooks.sh  setup-project-sh.sh  setup-security-features.sh  setup-tcpa.sh  test-workflow.py  toggle-design-system.sh  update-and-commit.sh  update-docs-to-python.py  validate-design-script.ts  verify-fixes.sh  verify-setup.js
templates/: boilerplate-templates.md  form-api-route.ts  gitignore-sample.txt  project-knowledge-template.md  vscode-snippets.json
tests/: system-check.test.ts  test-imports.tsx  test-setup.ts
types/: global.d.ts  index.ts  rudderstack.d.ts  tracking.ts
(+247 files in other folders)
